[gd_scene load_steps=7 format=3 uid="uid://4227l72a8kdu"]

[ext_resource type="PackedScene" uid="uid://cy43hvd5bivso" path="res://src/ui/components/backpack/avatar_preview.tscn" id="1_1eenv"]
[ext_resource type="Script" path="res://src/test/avatar/avatar_tester_standalone.gd" id="1_l1th6"]
[ext_resource type="Environment" uid="uid://c6yftsnvufsg8" path="res://assets/sky/cli_environment.tres" id="3_2n2br"]
[ext_resource type="PackedScene" uid="uid://ec0egfeyv5fm" path="res://src/ui/components/emotes/emote_wheel.tscn" id="3_ubmva"]
[ext_resource type="Texture2D" uid="uid://ckn18yn0v8tsa" path="res://src/ui/components/debug_panel/icons/Clear.svg" id="4_wetld"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_684t6"]
number_color = Color(0, 0.670588, 0, 1)

[node name="AvatarTesterStandalone" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l1th6")

[node name="SubViewportContainer" parent="." instance=ExtResource("1_1eenv")]
layout_mode = 0
offset_left = 806.0
offset_top = 109.0
offset_right = 1062.0
offset_bottom = 609.0
custom_environment = ExtResource("3_2n2br")
with_light = false

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 24.0
offset_right = 633.0
offset_bottom = 688.0

[node name="Avatars" type="Panel" parent="TabContainer"]
custom_minimum_size = Vector2(600, 600)
layout_mode = 2

[node name="OptionButton_AvatarList" type="OptionButton" parent="TabContainer/Avatars"]
layout_mode = 0
offset_left = 14.0
offset_top = 10.0
offset_right = 526.0
offset_bottom = 47.0

[node name="Button_DownloadWearables" type="Button" parent="TabContainer/Avatars"]
layout_mode = 0
offset_left = 16.0
offset_top = 64.0
offset_right = 581.0
offset_bottom = 111.0
text = "Download wearables"

[node name="Button_CopyWearableData" type="Button" parent="TabContainer/Avatars"]
layout_mode = 0
offset_left = 16.0
offset_top = 120.0
offset_right = 581.0
offset_bottom = 167.0
text = "Copy wearables data"

[node name="Button_Refresh" type="Button" parent="TabContainer/Avatars"]
layout_mode = 0
offset_left = 535.0
offset_top = 9.0
offset_right = 575.0
offset_bottom = 48.0
icon = ExtResource("4_wetld")

[node name="Emotes" type="Panel" parent="TabContainer"]
visible = false
custom_minimum_size = Vector2(600, 600)
layout_mode = 2

[node name="EmoteWheel" parent="TabContainer/Emotes" node_paths=PackedStringArray("avatar_node") instance=ExtResource("3_ubmva")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -24.0
offset_bottom = -24.0
avatar_node = NodePath("../../../SubViewportContainer/SubViewport/Avatar")

[node name="Button_OpenWheel" type="Button" parent="TabContainer/Emotes"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -121.0
offset_top = 16.0
offset_right = 121.0
offset_bottom = 54.0
grow_horizontal = 2
text = "Open wheel
"

[node name="Button_PlayCustom" type="Button" parent="TabContainer/Emotes"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -121.0
offset_top = 592.0
offset_right = 121.0
offset_bottom = 630.0
grow_horizontal = 2
text = "Play emote
"

[node name="Button_Clear" type="Button" parent="TabContainer/Emotes"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 127.0
offset_top = 592.0
offset_right = 285.0
offset_bottom = 630.0
grow_horizontal = 2
text = "Clear"

[node name="LineEdit_Custom" type="LineEdit" parent="TabContainer/Emotes"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 232.5
offset_bottom = 267.5
grow_horizontal = 2
grow_vertical = 2

[node name="Expression" type="PanelContainer" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Expression"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Expression/VBoxContainer"]
modulate = Color(1, 0, 0.211765, 1)
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
text = "Notepad"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit_Notepad" type="TextEdit" parent="TabContainer/Expression/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
text = "get_node(\"/root/AvatarTesterStandalone/SubViewportContainer/SubViewport/Avatar\").animation_player.get_animation_list()"
wrap_mode = 1

[node name="Label2" type="Label" parent="TabContainer/Expression/VBoxContainer"]
modulate = Color(1, 0, 0.211765, 1)
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
text = "Expression
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit_Expr" type="TextEdit" parent="TabContainer/Expression/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "get_node(\"/root/AvatarTesterStandalone/SubViewportContainer/SubViewport/Avatar\").animation_player.get_animation_list()"
wrap_mode = 1
syntax_highlighter = SubResource("CodeHighlighter_684t6")
draw_control_chars = true
draw_tabs = true
draw_spaces = true

[node name="Label3" type="Label" parent="TabContainer/Expression/VBoxContainer"]
modulate = Color(1, 0, 0.211765, 1)
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
text = "Result"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit_Result" type="TextEdit" parent="TabContainer/Expression/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
text = "asdasd"
editable = false
wrap_mode = 1

[connection signal="item_selected" from="TabContainer/Avatars/OptionButton_AvatarList" to="." method="_on_option_button_avatar_list_item_selected"]
[connection signal="pressed" from="TabContainer/Avatars/Button_DownloadWearables" to="." method="_on_button_download_wearables_pressed"]
[connection signal="pressed" from="TabContainer/Avatars/Button_CopyWearableData" to="." method="_on_button_copy_wearable_data_pressed"]
[connection signal="pressed" from="TabContainer/Avatars/Button_Refresh" to="." method="_on_button_refresh_pressed"]
[connection signal="pressed" from="TabContainer/Emotes/Button_OpenWheel" to="." method="_on_button_open_wheel_pressed"]
[connection signal="pressed" from="TabContainer/Emotes/Button_PlayCustom" to="." method="_on_button_play_custom_pressed"]
[connection signal="pressed" from="TabContainer/Emotes/Button_Clear" to="." method="_on_button_clear_pressed"]
[connection signal="text_changed" from="TabContainer/Expression/VBoxContainer/TextEdit_Expr" to="." method="_on_text_edit_expr_text_changed"]
